--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,1 +1,69 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+.navbar-1-1.navbar-light .navbar-nav .nav-link {
+  color: #9c9c9c;
+  transition: 0.3s;
+}
+
+.navbar-1-1.navbar-light .navbar-nav .nav-link.active {
+  font-weight: 500;
+  color: #466bf3;
+}
+
+.navbar-1-1 .btn-get-started {
+  border-radius: 12px;
+  padding: 12px 30px;
+  font-weight: 500;
+}
+
+.navbar-1-1 .btn-get-started-blue {
+  background-color: rgba(70, 107, 243, 0.1);
+  color: #466bf3 !important;
+  transition: 0.3s;
+}
+
+.navbar-1-1 .btn-get-started-blue:hover {
+  background-color: #466bf3;
+  transition: 0.3s;
+  color: white !important ;
+}
+
+/* GENERAL STYLE */
+.text-header {
+  font-weight: 900 !important;
+  font-size: 52px !important;
+}
+
+.text-subheader {
+  color: #7b7b7b;
+}
+/* JUMBOTRON */
+.navtabs-booking {
+  margin-top: -7rem;
+}
+
+.bg-row {
+  background-color: #fafafa;
+  border-radius: 24px;
+}
+
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  background-color: #3258e8 !important;
+  color: white !important;
+  font-weight: bold;
+}
+
+.nav-tabs .nav-link {
+  background-color: white;
+}
+
+.nav-tabs .nav-link.first {
+  background-color: white;
+  border-radius: 12px 0px 0px 0px;
+}
+
+.nav-tabs .nav-link.second {
+  background-color: white;
+  border-radius: 0px 12px 0px 0px;
+}
