--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -67,3 +67,58 @@
   background-color: white;
   border-radius: 0px 12px 0px 0px;
 }
+
+#services {
+  height: 100%;
+  margin-top: 10vh;
+  margin-top: 10vh;
+}
+
+#packages {
+  height: 100%;
+  padding-bottom: 10rem;
+}
+
+.components-images {
+  border-radius: 25px;
+}
+
+.components-images:hover {
+  border: 4px solid #3258e8;
+  transition: all 0.3s;
+}
+
+.star-position {
+  top: 16rem;
+  left: 2rem;
+}
+
+#destination {
+  height: auto;
+}
+
+.card-destination {
+  box-shadow: 0px 14px 25px #f2f2f2;
+  border-radius: 24px;
+}
+
+.btn-primary-destination {
+  /* background-color: #3258e8; */
+  background-color: tomato;
+  color: white;
+  border-radius: 12px;
+  bottom: 25px;
+  right: 25px;
+}
+
+.btn-primary-destination:hover {
+  background-color: pink;
+}
+
+.ranting {
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(15px);
+  top: 25px;
+  right: 25px;
+  border-radius: 25px;
+}
